RewardsPackage/force-app/main/default/objects/Program_Reward__c/Program_Reward__c.object-meta.xml
<CustomObject>
    <description>Junction object, connecting Rewards to Rewards Programs</description>
    <label>Program Reward</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Program Reward Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>