RewardsPackage/force-app/main/default/objects/Program_Reward__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Can be chosen as the label in Screen Flows for better display from a Record Choice Set</description>
    <formula>Reward__r.Name  + &quot; (&quot; + TEXT(  Reward__r.Cost__c  ) + &quot; pts)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>