RewardsPackage/force-app/main/default/objects/Program_Reward__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <description>The Reward to make eligible in this Rewards Program</description>
    <inlineHelpText>The Reward to make eligible in this Rewards Program</inlineHelpText>
    <label>Reward</label>
    <referenceTo>Reward__c</referenceTo>
    <relationshipLabel>Program Rewards</relationshipLabel>
    <relationshipName>Program_Rewards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>