RewardsPackage/force-app/main/default/objects/Program_Reward__c/fields/Reward_Name__c.field-meta.xml
<CustomField>
    <fullName>Reward_Name__c</fullName>
    <formula>Reward__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reward Name</label>
    <type>Text</type>
</CustomField>