RewardsPackage/force-app/main/default/objects/Program_Reward__c/fields/Rewards_Program__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Program__c</fullName>
    <description>Rewards Program that the Reward should be eligible for</description>
    <inlineHelpText>Rewards Program that the Reward should be eligible for</inlineHelpText>
    <label>Rewards Program</label>
    <referenceTo>Rewards_Program__c</referenceTo>
    <relationshipLabel>Program Rewards</relationshipLabel>
    <relationshipName>Program_Rewards</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>