RewardsPackage/force-app/main/default/objects/Program_Reward__c/fields/Rewards_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Rewards_Program_Name__c</fullName>
    <formula>Rewards_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rewards Program Name</label>
    <type>Text</type>
</CustomField>